--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-opencv-python
-mediapipe
-pickledb
-numpy
-pillow
+opencv-python==4.8.0.74
+mediapipe==0.10.0
+numpy==1.26.0
+Pillow==9.6.0
+scikit-learn==1.3.1
